--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,15 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/jv.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <script src="https://kit.fontawesome.com/abc01ba433.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/abc01ba433.js" crossorigin="anonymous"></script> -->
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script> 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="jv.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/jv.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
